--- a/.github/workflows/pr_frnt_deploy.yml
+++ b/.github/workflows/pr_frnt_deploy.yml
@@ -19,7 +19,7 @@ jobs:
                 script: |
                     cd ${{ secrets.PRODAPPDIR }}
                     ls
-                    git pull    
+                    git remote -v   
 
             # - name: npm install
             #   uses: appleboy/ssh-action@master
