--- a/.github/workflows/pr_frnt_deploy.yml
+++ b/.github/workflows/pr_frnt_deploy.yml
@@ -13,7 +13,7 @@ jobs:
               uses: appleboy/ssh-action@master
               with:
                 host: ${{ secrets.PRODHOST }}
-                username: d8b-common
+                username: d8b-deploy
                 passphrase: ${{ secrets.PRODDEPLPASS }}
                 key: ${{ secrets.PRODDEPLKEY }}
                 script: |
