--- a/.github/workflows/pr_frnt_deploy.yml
+++ b/.github/workflows/pr_frnt_deploy.yml
@@ -18,13 +18,13 @@ jobs:
                 key: ${{ secrets.PRODDEPLKEY }}
                 script: |
                     cd ${{ secrets.PRODAPPDIR }}
-                    git pull -v
+                    git pull
 
             - name: npm install
               uses: appleboy/ssh-action@master
               with:
                 host: ${{ secrets.PRODHOST }}
-                username: d8b-common
+                username: d8b-deploy
                 passphrase: ${{ secrets.PRODDEPLPASS }}
                 key: ${{ secrets.PRODDEPLKEY }}
                 script: docker-compose -f ${{ secrets.DOCKERDIR }}/d8b-front-npm-cli.yml run --rm d8b-front-npm-cli npm install
@@ -33,7 +33,7 @@ jobs:
               uses: appleboy/ssh-action@master
               with:
                 host: ${{ secrets.PRODHOST }}
-                username: d8b-common
+                username: d8b-deploy
                 passphrase: ${{ secrets.PRODDEPLPASS }}
                 key: ${{ secrets.PRODDEPLKEY }}
                 script: docker-compose -f ${{ secrets.DOCKERDIR }}/d8b-front-npm-cli.yml run --rm d8b-front-npm-cli node_modules/.bin/ng build --prod
@@ -42,7 +42,7 @@ jobs:
               uses: appleboy/ssh-action@master
               with:
                 host: ${{ secrets.PRODHOST }}
-                username: d8b-common
+                username: d8b-deploy
                 passphrase: ${{ secrets.PRODDEPLPASS }}
                 key: ${{ secrets.PRODDEPLKEY }}
                 script: |
@@ -53,7 +53,7 @@ jobs:
               uses: appleboy/ssh-action@master
               with:
                 host: ${{ secrets.PRODHOST }}
-                username: d8b-common
+                username: d8b-deploy
                 passphrase: ${{ secrets.PRODDEPLPASS }}
                 key: ${{ secrets.PRODDEPLKEY }}
                 script: |
@@ -63,7 +63,7 @@ jobs:
               uses: appleboy/ssh-action@master
               with:
                 host: ${{ secrets.PRODHOST }}
-                username: d8b-common
+                username: d8b-deploy
                 passphrase: ${{ secrets.PRODDEPLPASS }}
                 key: ${{ secrets.PRODDEPLKEY }}
                 script: docker container restart d8b-nginx
