--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
                   node-version: ${{ matrix.node-version }}
 
             - name: Install
-              run: npm install
+              run: npm install rop
 
             - name: copy env file
               run: |
