--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
     stage_deploy:
-      if: ${{ github.event.workflow_run.conclusion == 'success' }}   
+      if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}   
       name: Stage deploy
       runs-on: ubuntu-latest
       steps:
@@ -42,3 +42,11 @@ jobs:
           to: k.grebennikov@maxi-booking.ru
           from: Github actions # <user@example.com>
           content_type: text/html
+
+
+    event_check:
+      name: Check event type
+      runs-on: ubuntu-latest
+      steps:
+      - name: Log event type
+        run echo "$GITHUB_EVENT_NAME"
